removed use of box-sizing in header to avoid horizontal scroll bars in IE 7.

--- a/assets/css/generic/_spacing.scss
+++ b/assets/css/generic/_spacing.scss
@@ -4,5 +4,7 @@
  * -----------------------------------------------------------------------------
  */
 
+.spacing { padding: $base-spacing-unit; }
+
 .spacing-vertical { padding: $base-spacing-unit 0; }
 .spacing-vertical-double { padding: $base-spacing-unit * 2 0 }
